# Parallel-Breadth-First-Search--BFS--Algorithm-Implementation

./: README.md
src/CUDA_BFS/: BFS_global  BFS_global.cu  BFS_notebook.ipynb  BFS_texture  BFS_texture.cu  graph1_test.txt
src/OMP_BFS/: CMakeLists.txt  file.bash  main_bfs.c  main_bfs_parallel.c
src/OMP_BFS/measure_bfs/: BFS_measure_OMP.xlsx
src/OMP_BFS/measure_bfs/misure/1/: BFS-00-O0.csv  BFS-00-O1.csv  BFS-00-O2.csv  BFS-00-O3.csv  BFS-01-O0.csv  BFS-01-O1.csv  BFS-01-O2.csv  BFS-01-O3.csv  BFS-02-O0.csv  BFS-02-O1.csv  BFS-02-O2.csv  BFS-02-O3.csv  BFS-04-O0.csv  BFS-04-O1.csv  BFS-04-O2.csv  BFS-04-O3.csv  BFS-06-O0.csv  BFS-06-O1.csv  BFS-06-O2.csv  BFS-06-O3.csv  BFS-08-O0.csv  BFS-08-O1.csv  BFS-08-O2.csv  BFS-08-O3.csv  BFS-12-O0.csv  BFS-12-O1.csv  BFS-12-O2.csv  BFS-12-O3.csv  BFS-16-O0.csv  BFS-16-O1.csv  BFS-16-O2.csv  BFS-16-O3.csv  BFS-24-O0.csv  BFS-24-O1.csv  BFS-24-O2.csv  BFS-24-O3.csv  BFS-32-O0.csv  BFS-32-O1.csv  BFS-32-O2.csv  BFS-32-O3.csv
src/OMP_BFS/measure_bfs/misure/2/: BFS-00-O0.csv  BFS-00-O1.csv  BFS-00-O2.csv  BFS-00-O3.csv  BFS-01-O0.csv  BFS-01-O1.csv  BFS-01-O2.csv  BFS-01-O3.csv  BFS-02-O0.csv  BFS-02-O1.csv  BFS-02-O2.csv  BFS-02-O3.csv  BFS-04-O0.csv  BFS-04-O1.csv  BFS-04-O2.csv  BFS-04-O3.csv  BFS-06-O0.csv  BFS-06-O1.csv  BFS-06-O2.csv  BFS-06-O3.csv  BFS-08-O0.csv  BFS-08-O1.csv  BFS-08-O2.csv  BFS-08-O3.csv  BFS-12-O0.csv  BFS-12-O1.csv  BFS-12-O2.csv  BFS-12-O3.csv  BFS-16-O0.csv  BFS-16-O1.csv  BFS-16-O2.csv  BFS-16-O3.csv  BFS-24-O0.csv  BFS-24-O1.csv  BFS-24-O2.csv  BFS-24-O3.csv  BFS-32-O0.csv  BFS-32-O1.csv  BFS-32-O2.csv  BFS-32-O3.csv
src/OMP_BFS/measure_bfs/misure/3/: BFS-00-O0.csv  BFS-00-O1.csv  BFS-00-O2.csv  BFS-00-O3.csv  BFS-01-O0.csv  BFS-01-O1.csv  BFS-01-O2.csv  BFS-01-O3.csv  BFS-02-O0.csv  BFS-02-O1.csv  BFS-02-O2.csv  BFS-02-O3.csv  BFS-04-O0.csv  BFS-04-O1.csv  BFS-04-O2.csv  BFS-04-O3.csv  BFS-06-O0.csv  BFS-06-O1.csv  BFS-06-O2.csv  BFS-06-O3.csv  BFS-08-O0.csv  BFS-08-O1.csv  BFS-08-O2.csv  BFS-08-O3.csv  BFS-12-O0.csv  BFS-12-O1.csv  BFS-12-O2.csv  BFS-12-O3.csv  BFS-16-O0.csv  BFS-16-O1.csv  BFS-16-O2.csv  BFS-16-O3.csv  BFS-24-O0.csv  BFS-24-O1.csv  BFS-24-O2.csv  BFS-24-O3.csv  BFS-32-O0.csv  BFS-32-O1.csv  BFS-32-O2.csv  BFS-32-O3.csv
src/OMP_BFS/measure_bfs/misure/4/: BFS-00-O0.csv  BFS-00-O1.csv  BFS-00-O2.csv  BFS-00-O3.csv  BFS-01-O0.csv  BFS-01-O1.csv  BFS-01-O2.csv  BFS-01-O3.csv  BFS-02-O0.csv  BFS-02-O1.csv  BFS-02-O2.csv  BFS-02-O3.csv  BFS-04-O0.csv  BFS-04-O1.csv  BFS-04-O2.csv  BFS-04-O3.csv  BFS-06-O0.csv  BFS-06-O1.csv  BFS-06-O2.csv  BFS-06-O3.csv  BFS-08-O0.csv  BFS-08-O1.csv  BFS-08-O2.csv  BFS-08-O3.csv  BFS-12-O0.csv  BFS-12-O1.csv  BFS-12-O2.csv  BFS-12-O3.csv  BFS-16-O0.csv  BFS-16-O1.csv  BFS-16-O2.csv  BFS-16-O3.csv  BFS-24-O0.csv  BFS-24-O1.csv  BFS-24-O2.csv  BFS-24-O3.csv  BFS-32-O0.csv  BFS-32-O1.csv  BFS-32-O2.csv  BFS-32-O3.csv
(+173 files in other folders)
